{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 104,
  "lineage": "b20cbbdc-1ddc-a934-2f1c-7cf2f85dd4ac",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:716635345492:internet-gateway/igw-0b5ead3bdb854d8d3",
            "id": "igw-0b5ead3bdb854d8d3",
            "owner_id": "716635345492",
            "vpc_id": "vpc-0695f0c8e9a773aec"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:716635345492:route-table/rtb-0eef18d37ba7239ed",
            "id": "rtb-0eef18d37ba7239ed",
            "owner_id": "716635345492",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b5ead3bdb854d8d3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0695f0c8e9a773aec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_table_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076b07902f0ed9fe9",
            "route_table_id": "rtb-0eef18d37ba7239ed",
            "subnet_id": "subnet-0a151603234917374"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_route_table.public_subnet_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee677dca43c7156b",
            "route_table_id": "rtb-0eef18d37ba7239ed",
            "subnet_id": "subnet-08e50f32bc315b40e"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_route_table.public_subnet_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:716635345492:subnet/subnet-02f1b9ab7b5a59609",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.77.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f1b9ab7b5a59609",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "716635345492",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iap-tmp-private-subnet"
            },
            "tags_all": {
              "Name": "iap-tmp-private-subnet"
            },
            "vpc_id": "vpc-0695f0c8e9a773aec"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:716635345492:subnet/subnet-0dd76f0afe7439fd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.77.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd76f0afe7439fd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "716635345492",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iap-tmp-private-subnet"
            },
            "tags_all": {
              "Name": "iap-tmp-private-subnet"
            },
            "vpc_id": "vpc-0695f0c8e9a773aec"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:716635345492:subnet/subnet-0a151603234917374",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.77.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a151603234917374",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "716635345492",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iap-tmp-public-subnet"
            },
            "tags_all": {
              "Name": "iap-tmp-public-subnet"
            },
            "vpc_id": "vpc-0695f0c8e9a773aec"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:716635345492:subnet/subnet-08e50f32bc315b40e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.77.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e50f32bc315b40e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "716635345492",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iap-tmp-public-subnet"
            },
            "tags_all": {
              "Name": "iap-tmp-public-subnet"
            },
            "vpc_id": "vpc-0695f0c8e9a773aec"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:716635345492:vpc/vpc-0695f0c8e9a773aec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.77.0.0/16",
            "default_network_acl_id": "acl-0d81ba860ec9aeee1",
            "default_route_table_id": "rtb-0b962b61a93f69da9",
            "default_security_group_id": "sg-01153efd49d14cf2e",
            "dhcp_options_id": "dopt-d19117a9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0695f0c8e9a773aec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b962b61a93f69da9",
            "owner_id": "716635345492",
            "tags": {
              "Name": "iap-tmp-vpc"
            },
            "tags_all": {
              "Name": "iap-tmp-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes_sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:716635345492:security-group/sg-046be8d2a0b9ffe02",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046be8d2a0b9ffe02",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.77.0.0/24",
                  "10.77.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "iap-tmp-eks-nodes-security-group",
            "name_prefix": "",
            "owner_id": "716635345492",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0695f0c8e9a773aec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}